# triqs

./: CMakeLists.txt
cmake/: FindPythonWrapperMacro.cmake
pytriqs/: __init__.py
pytriqs/arrays/: CMakeLists.txt
pytriqs/gf/: CMakeLists.txt  gf_fnt_desc.py  meshes_desc.py  singularities_desc.py  wrapped_aux_desc.py
pytriqs/lattice/: CMakeLists.txt  lattice_tools_desc.py
pytriqs/operators/: CMakeLists.txt  operators_desc.py
pytriqs/operators/util/: CMakeLists.txt  extractors_desc.py
pytriqs/random_generator/: CMakeLists.txt
pytriqs/statistics/: CMakeLists.txt
test/pytriqs/wrap_test/: CMakeLists.txt  my_moduleB_desc.py  my_module_desc.py  test_bl_desc.py  test_g_desc.py  test_multivar_desc.py
tools/: CMakeLists.txt  clang_parser.py  clang_parser2.py  config.py.in
tools/cpp2py/: c++2py.py  c++2py_v2.py  dependency_analyzer.py  doc.py  util.py  wrap_generator.py
tools/cpp2py/mako/: converters.hxx  desc.py  py_converter.hpp  xxx_wrap.cpp
triqs/: CMakeLists.txt
triqs/gfs/block/: block_gf.hxx  block_gf.mako.hpp
triqs/gfs/gf/: gf.hxx  gf.mako.hpp
triqs/gfs/singularity/: tail.hxx
triqs/python_tools/: wrapper_tools.hpp
triqs/python_tools/converters/: function.hpp  generics.hpp  gf.hpp
triqs/utility/: macros.hpp
